--- a/README
+++ b/README
@@ -1,1 +1,6 @@
 According to this ancient README file, your only hope is to destroy the original were-car.
+
+EVENTS (out of order and not much thought put into):
+BLOCK_PLACE - when a block is placed
+BLOCK_DESTORY - when a block is destroyed 
+PLAYER_DEATH - when a player dies
